# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer_check.yml
page_analyzer/: app.py  config.py  db.py  get_seo.py  html.py  validator.py
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
templates/: index.html
