[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
ipython = "^8.14.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
