[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]
packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.7"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
ipython = "^8.14.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
Jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
